<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Spring Boot 父项目 -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.6</version>
        <relativePath/>
    </parent>

    <!-- 项目基本信息 -->
    <groupId>com.domye</groupId>
    <artifactId>picture-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>domye-picture-backend</name>
    <description>domye-picture-backend</description>
    <modules>
        <module>picture-common</module>
        <module>picture-model</module>
        <module>picture-service</module>
        <module>picture-auth</module>
        <module>picture-api</module>
        <module>picture-bom</module>
    </modules>

    <!-- 项目属性配置 -->
    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <lombok.version>1.18.36</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
    </properties>

    <!-- 根 POM 不应包含具体依赖，移至需要的模块 -->

    <!-- ==================== 依赖管理 ==================== -->
    <dependencyManagement>
        <dependencies>
            <!-- 引入项目 BOM，统一管理第三方依赖版本 -->
            <dependency>
                <groupId>com.domye</groupId>
                <artifactId>picture-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 内部模块版本管理 -->
            <dependency>
                <groupId>com.domye</groupId>
                <artifactId>picture-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.domye</groupId>
                <artifactId>picture-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.domye</groupId>
                <artifactId>picture-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.domye</groupId>
                <artifactId>picture-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- ==================== 构建配置 ==================== -->
    <build>
        <pluginManagement>
            <plugins>
                <!-- Spring Boot 打包插件 -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <mainClass>com.domye.picture.api.DomyePictureBackendApplication</mainClass>
                    </configuration>
                    <executions>
                        <execution>
                            <id>repackage</id>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Maven 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Maven Enforcer 插件 - 强制依赖收敛和 Java 版本 -->

            <!-- Maven Enforcer 插件 - 强制依赖收敛和 Java 版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven-rules</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                    <message>项目需要 Java 17 或更高版本</message>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.6.0,)</version>
                                    <message>项目需要 Maven 3.6.0 或更高版本</message>
                                </requireMavenVersion>
                                <dependencyConvergence/>
                                <banDuplicatePomDependencyVersions/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
